samples/_failures_safe/1761157116_44c79d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e9a7914e.c: In function ‘main’:
./samples/SAFE/__tmp_e9a7914e.c:147:13: error: expected declaration or statement at end of input
  147 |             case STATE_C: printf("C"); break;
      |             ^~~~
./samples/SAFE/__tmp_e9a7914e.c:147:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e9a7914e.c:147:13: error: expected declaration or statement at end of input
